--- a/bower.json
+++ b/bower.json
@@ -1,5 +1,5 @@
 {
-  "name": "KiStorm",
+  "name": "kistorm",
   "homepage": "https://github.com/Knowinnovation/kistorm",
   "authors": [
     "Drew Dunne <drew@drewsdunne.com>"
